board/mendeleev/rootfs_overlay/etc/iptables.conf
# Generated by iptables-save v1.8.9 on Thu Jan  1 01:33:20 1970
*nat
:PREROUTING ACCEPT [4:800]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [1:88]
:POSTROUTING ACCEPT [1:88]
-A PREROUTING -p tcp -m tcp --dport 8080 -j REDIRECT --to-ports 80
COMMIT
# Completed on Thu Jan  1 01:33:20 1970

# Generated by iptables-save v1.8.9 on Thu Jan  1 01:33:20 1970
*filter
:INPUT ACCEPT [1:120]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [199:20722]
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p udp -m udp --dport 123 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1883 -j ACCEPT
COMMIT
# Completed on Thu Jan  1 01:33:20 1970
